--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,10 @@ dependencies:
     sdk: flutter
 
 
+  http: ^0.12.2
+  flutter_secure_storage: ^3.3.4
+  flushbar: ^1.10.4
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
