--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   http: ^0.12.2
   flutter_secure_storage: ^3.3.4
   flushbar: ^1.10.4
+  time_range: ^0.5.0
+  smart_select: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
