--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   flushbar: ^1.10.4
   time_range: ^0.5.0
   smart_select: ^4.0.1
-
+  enum_to_string: ^1.0.13
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
